hphp/hack/test/typecheck/union/potential_blowup_tvar_toption.php.exp
File "potential_blowup_tvar_toption.php", line 12, characters 10-11:
Undefined variable: $c (Naming[2050])
